--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ opencv-python>=4.8.0
 numpy>=1.24.0
 pillow>=10.0.0
 moviepy>=2.0.0
+azure-cognitiveservices-speech>=1.34.0
+python-dotenv>=1.0.0
+openai>=1.0.0
